# lunes-app

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .prettierrc.js  .sentryclirc  .yarnrc.yml  App.tsx  CODEOWNERS  Gemfile  Navigation.tsx  README.md  app.json  babel.config.js  importchanger.py  jest.config.ts  jest.setup.ts  metro.config.ci.js  metro.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  types.ts  version.json
.circleci/: autogenerated_header.yml  circle_env.sh  config.yml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.maestro/: screenshots.yaml
android/: Gemfile  build.gradle  gradle.properties  keystore.gpg  settings.gradle
components/: Actions-test.tsx  Actions.tsx  AnswerSection.tsx  FeedbackSection.tsx  Header.tsx  MenuItem-test.tsx  MenuItem.tsx  Modal-test.tsx  Modal.tsx  Popover.tsx  PopoverContent.tsx  Title.tsx  VocabularyOverviewListITem-test.tsx  VocabularyOverviewListItem.tsx
constants/: colors.ts  data.ts  endpoints.ts
docs/: cicd.md  concepts.md  conventions.md  debugging.md  patches.md  screenshots.md  setup-windows-android-emulator.md  technical-documentation.md  vscode.md
interfaces/: excercises.ts  exercise.ts  exercises.ts  header.ts  index.ts  menuItem.ts  profession.ts  professionSubcategory.ts  summaryScreens.ts  title.ts
ios/: Gemfile  Podfile
jest/: jestSetup.js  svgMocks.js
modules/speech-to-text/android/src/main/jni/: CMakeLists.txt
navigation/: imports.ts  index.tsx  styles.ts
patches/: react-native-tab-view+3.5.2.patch  (+3 more)
(+988 files in other folders)
